Bug fix versione documento

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -32,7 +32,7 @@ Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 \addversione{0.0.11}{04/02/2022}{Giovanni Cocco}{Correzione}{Correzioni varie}
 \addversione{0.0.12}{05/02/2022}{Alberto Nicoletti}{Riscrittura}{Riscrittura di alcuni casi d'uso a seguito di una discussione interna al gruppo}
 \addversione{0.0.13}{06/02/2022}{Alberto Nicoletti}{Stesura e correzioni}{Stesura UC12 e UC13, correzioni varie}
-\addversione{0.0.14}{06/02/2022}{Andrea Volpe}{Stesura e correzioni}{Modificato quasi tutti i requisiti e correzioni varie, in base all'incontro del verbale 2022_02_04_I}
+\addversione{0.0.14}{07/02/2022}{Andrea Volpe}{Stesura e correzioni}{Modificato quasi tutti i requisiti e correzioni varie, in base all'incontro del verbale 2022 02 04 I}
 
 \begin{document}
 
