--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -18,6 +18,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 }
 
 \addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura iniziale}
+\addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -39,16 +40,12 @@ Prodotti necessari:
 \item Analisi delle Tecnologie;
 \item Proof of Concept.
 \end{itemize}
-Processi coinvolti:
-\begin{itemize}
-\item Amministrazione di Progetto.
-\end{itemize}
 
 
 \subsection{RTB}
 \paragraph{Analisi dei Requisiti}
 Inizio: 01/12/2021\par
-Fine prevista: 23/12/2021\par
+Fine prevista: 08/02/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
@@ -70,7 +67,7 @@ Giovanni Cocco & Verificatore & 8 & TBD & TBD \\\hline
 
 \paragraph{Analisi delle Tecnologie}
 Inizio: 01/12/2021\par
-Fine prevista: 23/12/2021\par
+Fine prevista: 08/02/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
@@ -90,38 +87,76 @@ Federico Marchi & Analista & 21 & TBD & TBD \\\hline
 Giovanni Cocco & Verificatore & 6 & TBD & TBD \\\hline
 \end{tabular}
 
-\paragraph{Sviluppo Proof of Concept}
-Inizio: 23/12/2021\par
-Fine prevista: 07/12/2021\par
-Fine effettiva: TBD
-
-\paragraph{Verifica Proof of Concept}
-Inizio: 01/01/2021\par
-Fine prevista: 15/01/2022\par
-Fine effettiva: TBD
-
-\paragraph{Amministrazione di Progetto}
+\paragraph{Piano di Progetto (RTB)}
 Inizio: 01/12/2021\par
-Fine prevista: 23/12/2021\par
+Fine prevista: 08/02/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
 Responsabile & 21 & TBD & 30\euro & 630\euro & TBD \\\hline
-Amminstratore & 21 & TBD & 20\euro & 420\euro & TBD \\\hline
-Verificatore & 6 & TBD & 15\euro & 90\euro & TBD \\\hline
-Totale ore: & 48 & TBD & Totale costi: & 1140\euro & TBD \\\hline
+Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
+Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Elia Scandaletti & Responsabile & 21 & TBD & TBD \\\hline
-Raffaele Oliviero & Amministratore & 21 & TBD & TBD \\\hline
-Giovanni Cocco & Verificatore & 6 & TBD & TBD \\\hline
+Elia Scandaletti & Responsabile & 11 & TBD & TBD \\\hline
+Raffaele Oliviero & Responsabile & 10 & TBD & TBD \\\hline
+Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
 \end{tabular}
+
+\paragraph{Piano di Qualifica (RTB)}
+Inizio: 01/12/2021\par
+Fine prevista: 08/02/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Responsabile & 21 & TBD & 30\euro & 630\euro & TBD \\\hline
+Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
+Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Elia Scandaletti & Responsabile & 10 & TBD & TBD \\\hline
+Raffaele Oliviero & Responsabile & 11 & TBD & TBD \\\hline
+Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
+\end{tabular}
+
+\paragraph{Sviluppo Proof of Concept}
+Inizio: 23/12/2021\par
+Fine prevista: 08/02/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Programmatore & 40 & TBD & 15\euro & 600\euro & TBD \\\hline
+Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
+Totale ore: & 43 & TBD & Totale costi: & 645\euro & TBD \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Giovanni Cocco & Programmatore & 20 & TBD & TBD \\\hline
+Matteo Galvagni & Programmatore & 20 & TBD & TBD \\\hline
+Elia Scandaletti & Verificatore & 3 & TBD & TBD \\\hline
+\end{tabular}
+
+\paragraph{Presentazione Proof of Concept}
+Inizio: 01/01/2021\par
+Fine prevista: 10/02/2022\par
+Fine effettiva: TBD
 
 \paragraph{Grafico di Gannt}
 Il grafico di Gannt può essere consultato al \underline{\href{https://docs.google.com/spreadsheets/d/e/2PACX-1vRd4970Fob6KlNwY1iV6bnHZXNl41F74utFkkc9ykuT1NUEGLnFcCd4rOHbXjW99ichDnkV3cEGCmWi/pubhtml?gid=1972921762}{seguente indirizzo}}.
