--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -112,23 +112,23 @@ Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
 \paragraph{Piano di Qualifica (RTB)}
 Inizio: 01/12/2021\par
 Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 05/02/2022
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 21 & TBD & 30\euro & 630\euro & TBD \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+Responsabile & 21 & 8 & 30\euro & 630\euro & 240\euro \\\hline
+Verificatore & 3 & 0.5 & 15\euro & 45\euro & 7.50\euro \\\hline
+Totale ore: & 24 & 8.5 & Totale costi: & 675\euro & 247.50\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & -15.5 & \multicolumn{2}{r|}{Differenza di costo:} & -427.50\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Elia Scandaletti & Responsabile & 10 & TBD & TBD \\\hline
-Raffaele Oliviero & Responsabile & 11 & TBD & TBD \\\hline
-Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
+Elia Scandaletti & Responsabile & 10 & 5.5 & -4.5 \\\hline
+Raffaele Oliviero & Responsabile & 11 & 2.5 & -8.5 \\\hline
+Giovanni Cocco & Verificatore & 3 & 0.5 & -2.5 \\\hline
 \end{tabular}
 
 \paragraph{Sviluppo Proof of Concept}
