--- a/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -381,24 +381,17 @@ Sarà anche necessario fornire un'applicazione mobile (o applicazione web) per i
 Per richiamare funzioni nel contratto (quindi eseguire transazioni in blockchain) sarà necessario utilizzare una o più librerie che ci consentano di farlo sia lato server che lato client.
 
 \subsection*{Backend}
-Poiché l'architettura scelta prevede necessariamente l'utilizzo di un server sono state valutate diverse opzioni per quanto riguarda la scelta del linguaggio e dell'eventuale framework per lo sviluppo della parte di backend. Tra questi sono stati presi in considerazione Java e Javascript poiché ci consentono di utilizzare rispettivamente le librerie Web3j e Web3js che permettono di emettere transazioni in blockchain nonchè gestire oggetti (transazione, contratto, ecc) comodamente. La scelta è infine ricaduta su Java poichè, oltre ad essere stato consigliato dal proponente, si tratta di un linguaggio nativamente ad oggetti ed è fortemente tipizzato, al contrario di JavaScript che implicherebbe l'utilizzo di soluzioni non native come TypeScript per l'integrazione degli oggetti.
-Per quanto riguarda invece la scelta del framework per lo sviluppo è stato scelto Java Spring: offre infatti un'ampia documentazione ed è inoltre il framework consigliato dal proponente.
+Poiché l'architettura scelta prevede necessariamente l'utilizzo di un server sono state valutate diverse opzioni per quanto riguarda la scelta del linguaggio e dell'eventuale framework per lo sviluppo della parte di backend. Tra questi sono stati presi in considerazione Java e Javascript poiché ci consentono di utilizzare rispettivamente le librerie Web3j e Web3js che permettono di emettere transazioni in blockchain nonchè gestire oggetti (transazione, contratto, ecc) comodamente. La scelta è infine ricaduta sull'utilizzo di TypeScript (NodeJS) poichè ci consente di usufruire della comodità di Javascript (e delle sue librerie che ci interessano) con l'integrazione della tipizzazione. Per l'ascolto di eventi emessi a lato contratto il nodo presso la quale ascoltare sarà fornito dal servizio di API per Polygon "Moralis.io", essendo uno dei pochi nodi che tra l'altro offre un punto di accesso WebSocket e non solamente in HTTPS necessario per la "sottoscrizione" ad eventi in JS.
 
-\subsubsection*{Pagamento automatizzato alla messa in vendita}
+\subsection*{Pagamento automatizzato alla messa in vendita}
 Per rendere automatizzata la possibilità di pagare un oggetto con ShopChain, durante il normale iter di messa in vendita degli oggetti da parte dei venditori è necessario integrare uno script che dialoghi con la blockchain per creare un'istanza per il pagamento che genererà un ID univoco e conserverà il prezzo atteso per confrontarlo con il denaro inviato di un cliente quando acquisterà tale oggetto.
-Tale script verrà sviluppato in Python per comodità di sviluppo e facilità di integrazione.
-Non utilizzando Metamask, il nodo presso la quale emettere le transazioni sarà fornito dal servizio di API per Polygon "Infura".
+Tale script verrà sviluppato in Python per comodità di sviluppo e facilità di integrazione. Sarà necessario utilizzare la libreria "Web3py".
+Non utilizzando Metamask, il nodo presso la quale emettere le transazioni sarà fornito dal servizio di API per Polygon "Moralis.io".
 
-\subsubsection*{Database}
-Per la memorizzazione dei dati di nostro interesse circa le transazioni è necessario l'utilizzo di un database. Poiché non sono emerse necessità specifiche per le quali utilizzare un determinato database piuttosto che un altro è stato scelto PostgreSQL poiché suggerito dalla Proponente.
+\subsection*{Database}
+Per la memorizzazione dei dati di nostro interesse circa le transazioni è necessario l'utilizzo di un database. Poiché non sono emerse necessità specifiche per le quali utilizzare un determinato database piuttosto che un altro è stato scelto MariaDB.
 
-\subsection*{Frontend}
-Sarà necessaria la realizzazione di una WebApp per permettere a venditori, Ecommerce e acquirenti di interagire in modo facile ed intuitivo per le attività di acquisto, monitoraggio dei vari ordini e infine per lo sblocco dei fondi alla ricezione del pacco con scansione del QR-code.
-
-\subsubsection*{Acquisto e monitoraggio ordini}
-Per quanto riguarda la realizzazione della WebApp per l'acquisto e il monitoraggio ordini è stato scelto il framework Javascript Angular. È stato scelto poiché rispetta le nostre esigenze ed è ottimo per la realizzazione di WebApp multipiattaforma. Javascript ci consentirà inoltre di utilizzare la sopracitata libreria Web3js per gestire le transazioni in blockchain nonchè interfacciarsi comodamente con l'estensione di Metamask per la firma delle transazioni.
-
-\subsubsection*{Scansione QR code}
+\subsection*{Scansione QR code}
 Per quanto riguarda la realizzazione della App/Webapp per lo scansionamento del QR code da parte dei clienti degli Ecommerce, considerando che Metamask su dispositivi mobili non è disponibile sottoforma di estensione per browser ma come intera applicazione con un browser interno dedicato, è stato scelto di sviluppare una Webapp in modo tale che sia comodamente raggiungibile da tale browser interno.
 
 \end{document}
