Aggiornate norme di progetto

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -22,7 +22,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura \ref{documentazione-documenti-piano-di-qualifica} e \ref{verifica-e-validazione}}
 \addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di \ref{verifica-e-validazione} a decisioni collettive}
 \addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure di \ref{revisioni-di-avanzamento-interne}}
-
+\addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di \ref{analisi-dei-requisiti}, \ref{analisi-delle-tecnologie} e \ref{piano-di-progetto}}
 
 \begin{document}
 
@@ -199,6 +199,30 @@ Lo scopo del \textit{Piano di Qualifica} è definire le metriche e i requisiti m
 Il titolo del documento è ``Piano di Qualifica".
 \subparagraph{Nome del file}
 Il file sarà chiamato \texttt{piano\_di\_qualifica.tex}.
+
+\paragraph{Piano di Progetto}\label{piano-di-progetto}
+\subparagraph{Scopo}
+Lo scopo del \textit{Piano di Progetto} è definire gli obiettivi da raggiungere, stabilendo le tempistiche e chi se ne occupa e tiene traccia del loro progresso, valutando i costi sostenuti rispetto a quelli preventivati.
+\subparagraph{Titolo}
+Il titolo del documento è ``Piano di Progetto".
+\subparagraph{Nome del file}
+Il file sarà chiamato \texttt{piano\_di\_progetto.tex}.
+
+\paragraph{Analisi dei requisiti}\label{analisi-dei-requisiti}
+\subparagraph{Scopo}
+Lo scopo dell'\textit{Analisi dei requisiti} è raccogliere i risultati dell’attività di analisi dei requisiti. Esso contiene quindi la descrizione dei casi d’uso del prodotto software da sviluppare, ed i requisiti suddivisi per tipologia.
+\subparagraph{Titolo}
+Il titolo del documento è ``Analisi dei requisiti".
+\subparagraph{Nome del file}
+Il file sarà chiamato \texttt{analisi\_dei\_requisiti.tex}.
+
+\paragraph{Analisi delle tecnologie}\label{analisi-delle-tecnologie}
+\subparagraph{Scopo}
+Lo scopo dell'\textit{Analisi delle tecnologie} è valutare le tecnologie disponibili alla realizzazione del progetto. Esso contiene quindi le metriche di valutazione e l'analisi delle tecnologie in base a tali metriche.
+\subparagraph{Titolo}
+Il titolo del documento è ``Analisi delle tecnologie".
+\subparagraph{Nome del file}
+Il file sarà chiamato \texttt{analisi\_delle\_tecnologie.tex}.
 
 \subsection{Verifica e Validazione}\label{verifica-e-validazione}
 Ogni prodotto per essere accettato nel branch \texttt{main} deve rispettare i requisiti minimi definiti dal \textit{Piano di Qualifica}. 
